# intelligent-agent

./: .gitignore  project.md  reusme.md
agent-client/: components.json  eslint.config.mjs  package.json  pnpm-lock.yaml
agent-client/src/app/: globals.css  layout.tsx  page.tsx
agent-client/src/lib/: api-endpoints.ts  constants.ts  fetcher.ts  request.ts
agent-client/src/schemas/: character.ts  session.ts
agent-client/src/stores/: use-sessions-store.ts
agent-client/src/types/: chat-response.ts
agent-server/: Dockerfile  docker-compose.yml  pyproject.toml
agent-server/data/: langchain.db-shm  langchain.db-wal
agent-server/src/: main.py
agent-server/src/agents/: __init__.py  supervisor_agent.py
agent-server/src/api/: __init__.py
agent-server/src/api/v1/: __init__.py  auth.py  auth_back.py  chat.py  upload.py
agent-server/src/configuration/: app_config.py  model_config.py
agent-server/src/database/: db.py
agent-server/src/dependencies/: __init__.py  verify_token.py
agent-server/src/graphs/deep_researcher/: graph.py
agent-server/src/graphs/supervisor/: graph.py  state.py
agent-server/src/manager/: __init__.py
agent-server/src/models/: __init__.py
agent-server/src/models/schemas/: __init__.py  chat.py  user.py
agent-server/src/shared/configuration/: __init__.py  configuration.py  model_config.py  server_config.py  settings.py
agent-server/src/shared/constants/: github.py
agent-server/src/shared/utils/: load_chat_model.py  streaming.py  tools.py
agent-server/src/utils/: __init__.py  load_chat_model.py  prompts.py  tools.py
(+31 files in other folders)
